# ueas

./: .gitignore  AGENTS.md  AGENT_CONTEXT_FOR_NEXT_RALPH.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTEXT_FOR_RLM.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONVERSATION.md  CURRENT_STATE.md  Cargo.toml  Dockerfile  LICENSE  LOOP_AGENTS.md  NOTES_AND_LEARNINGS.md  NOTICE  PLAN.md  PREVIOUS_STATE.md  README.md  REVIEW.md  RLM_INSTRUCTIONS.md  SECURITY.md  SPEC.md  SUPERVISOR_LOG.md  TEMP.md  TODO.md  TODOS.md  VERSION  cloudbuild.yaml  err.txt  out.txt  test_out.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc_proposal.yml  target_generator.yml
.github/workflows/: ci.yml  deploy-cf.yml  fuzz.yml  publish.yml  rebuild-wasm.yml
backends/: Cargo.toml
backends/src/: cpp.rs  java.rs  javascript.rs  latex.rs  lib.rs  mcp.rs
docs/: CLA.md  CONTRIBUTING.md  OPEN_PROBLEMS.md
docs/adr/: 0006-formal-verification.md  0007-wasm-playground.md  0008-language-frontends.md  0011-tensor-architecture.md  0013-mcp-integration.md  0015-jupyter-kernel.md  README.md
docs/deployment/: CLOUDFLARE.md  DAFNY_LOCAL.md  GOOGLE_CLOUD.md  README.md  VERCEL.md
docs/gtm/: E2E_TEST_PROMPTS.md  LAUNCH_POSTS.md  MCP_SUBMISSION.json  MCP_SUBMISSION.md  OUTREACH_TEMPLATES.md
docs/meeting-notes/: README.md
docs/rfcs/: 0001-user-defined-structs.md  0002-concurrency-work-span.md  0003-formal-verification-backends.md  0004-distributed-grammar.md  0005-quantum-grammar.md  0006-tensor-grammar.md  0009-stochastic-algorithms.md  0010-infinite-streams.md  0011-cryptographic-constant-time.md
examples/: backtracking_subsets.ueas  bfs.ueas  binary_search.ueas  dfs.ueas  dijkstra.ueas  euclidean.ueas  largest_rectangle.ueas  linear_search.ueas  lru_cache.ueas  matrix_multiply.ueas  merge_intervals.ueas  merge_sort.ueas  quicksort.ueas  quicksort_randomized.ueas  rotate_array.ueas  sudoku_solver.ueas  two_sum.ueas  valid_parentheses.ueas  word_ladder.ueas
examples/arrays/: dutch_national_flag.ueas  next_permutation.ueas  sliding_window_max.ueas
examples/backtracking/: n_queens.ueas  sudoku_solver.ueas
examples/core/: binary_search.ueas  euclidean.ueas  matrix_multiply.ueas
examples/dynamic_programming/: median_two_sorted.ueas  regex_match.ueas
examples/features/advanced/: const_computation.ueas  memory_bound_sort.ueas
examples/features/concurrency/: spawn_join_matrix.ueas
examples/features/cryptographic/: constant_time_compare.ueas
examples/features/hardware/: cache_optimized_search.ueas
examples/features/modules/: imported_gcd.ueas
examples/features/streams/: fibonacci_generator.ueas
examples/features/tensor/: matrix_broadcast.ueas
examples/graph/: dijkstra.ueas
examples/heap/: top_k_frequent.ueas
examples/sorting/: merge_sort.ueas
frontends/src/: lib.rs
grammar/: UEAS.g4
implementation/: Cargo.toml
implementation/backends/: Cargo.toml  README.md
implementation/backends/src/: cpp.rs  dafny.rs  java.rs  javascript.rs  latex.rs  lean4.rs  lib.rs  mcp.rs  tla.rs
implementation/backends/tests/: cross_target.rs
implementation/frontends/: Cargo.toml
implementation/frontends/src/: python.rs
implementation/tools/: Dockerfile  build_wasm.ps1  mcp_bridge.py
implementation/tools/ueas-mcp/: Cargo.toml
implementation/tools/ueas-mcp/src/: main.rs
implementation/tools/ueas-wasm/: Cargo.toml
implementation/tools/ueas-wasm/src/: lib.rs
implementation/wasm/: Cargo.toml  build.ps1
kernel/: Cargo.toml
kernel/src/: lib.rs  linker.rs
kernel/src/ast/: mod.rs
kernel/src/heap/: mod.rs
kernel/src/infer/: mod.rs
kernel/src/interp/: mod.rs
kernel/src/invariants/: mod.rs
kernel/src/profiling/: mod.rs
kernel/src/traps/: mod.rs
kernel/tests/: conformance.rs  fuzz.rs
specification/: SPEC.md
specification/docs/: GOVERNANCE.md
specification/grammar/: UEAS.g4
tools/: Dockerfile
tools/ueas-cli/: Cargo.toml
tools/ueas-cli/src/: main.rs
tools/ueas-cloud-receiver/: Cargo.toml  Dockerfile  README.md  google-cloud-run.yaml
tools/ueas-cloud-receiver/src/: main.rs
tools/ueas-dap/: Cargo.toml  README.md
tools/ueas-dap/src/: lib.rs  main.rs
tools/ueas-jupyter/: setup.py
tools/ueas-mcp/: Cargo.toml  README.md  package.json
tools/ueas-mcp-cf/: README.md  wrangler.toml
tools/ueas-mcp/src/: index.js  main.rs  ueas_wasm_bg.wasm
tools/ueas-playground/: README.md  app.js  index.html  package.json  style.css
(+87 files in other folders)
