[package]
name = "ueas-kernel"
version = "0.1.0"
edition = "2021"
description = "UEAS Abstract Interpreter — AST evaluation, invariant enforcement, complexity profiling"
license = "Apache-2.0"
repository = "https://github.com/seismael/ueas"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
