[package]
name = "ueas-backends"
version = "0.1.0"
edition = "2021"
description = "UEAS Transpilation Backends — plugin system for TargetGenerator implementations"
license = "Apache-2.0"
repository = "https://github.com/seismael/ueas"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
ueas-kernel = { path = "../kernel" }
