[package]
name = "ueas-frontends"
version = "0.1.0"
edition = "2021"
description = "UEAS Language Frontends — reverse transpilation from target languages to canonical AST"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ueas-kernel = { path = "../kernel" }
anyhow = "1"
