[package]
name = "ueas-cli"
version = "0.1.0"
edition = "2021"
description = "UEAS CLI — parse, validate, execute, and transpile UEAS algorithms"

[[bin]]
name = "ueas"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ueas-kernel = { path = "../../kernel" }
ueas-backends = { path = "../../backends" }
anyhow = "1"
serde_json = "1"
