[package]
name = "ueas-cloud-receiver"
version = "0.1.0"
edition = "2021"
description = "UEAS Cloud Run HTTP receiver — Dafny/Z3 verification backend"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ueas-kernel = { path = "../../implementation/kernel" }
ueas-backends = { path = "../../implementation/backends" }
