[package]
name = "ueas-dap"
version = "0.1.0"
edition = "2021"
description = "DAP debug adapter for UEAS — step through algorithm execution"

[[bin]]
name = "ueas-dap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ueas-kernel = { path = "../../implementation/kernel" }
