[package]
name = "ueas-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for UEAS — AI agent integration"
license = "Apache-2.0"
repository = "https://github.com/seismael/ueas"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ueas-kernel = { path = "../implementation/kernel" }
ueas-backends = { path = "../implementation/backends" }
