[package]
name = "ueas-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for UEAS — AI agent integration"
license = "Apache-2.0"
repository = "https://github.com/seismael/ueas"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
socket2 = { version = "0.5", features = ["all"] }
ueas-kernel = { path = "../../kernel" }
ueas-backends = { path = "../../backends" }
