[package]
name = "ueas-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for UEAS kernel (Epoch 9 Phase 2)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
ueas-kernel = { path = "../../kernel" }
ueas-backends = { path = "../../backends" }

# Build: wasm-pack build --target web

[workspace]
